# Finance-Mate

./: .env  backend.py  main.py  mydb.db  pyproject.toml  requirements.txt  run.py  users.db
backend/: __init__.py
backend/db/: __init__.py
backend/db/models/: __init__.py  user.py
backend/routes/: user.py
backend/schemas/: __init__.py  user.py
bot/: main.py
bot/keyboards/: __init__.py  inline_keyboards.py  reply_keyboards.py
bot/utils/: __init__.py  charts.py  states.py
