[tool.poetry]
name = "finance-mate"
version = "0.1.0"
description = "my project (finance-mate) =)"
authors = ["Leonidig <leonid200955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.2"
hypercorn = "^0.17.3"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
